--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
   <header  class="container mx-auto">
     <div class="ml-6 lg:ml-0">
       <nav class="text-white mb-10 bg-[#F85559] rounded-full">
-        <div class="flex justify-between p-4">
+        <div class="flex flex-row-reverse lg:flex-row md:flex-row  justify-between p-4">
+          <div class="flex-none  visible md:hidden lg:hidden">
+            <button class="btn btn-square btn-ghost">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+            </button>
+          </div>
           <div class="lg:flex md:flex justify-start items-center gap-8 hidden">
             <span>Home</span>
             <span>About Us</span>
@@ -39,7 +44,7 @@
             <span>All fruits</span>
           </div>
           <div class="flex justify-center items-center gap-3">
-            <img class="w-3 lg:w-7 md:w-4" src="./images/logo.png" alt="">
+            <img class="w-5 lg:w-7" src="./images/logo.png" alt="">
             <span class="text-xl md:text-2xl lg:text-4xl">Fruit Burst</span>
           </div>
           <div class="lg:flex md:flex justify-center items-center hidden lg:visible">
