added the change

--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
           </div>
         </div>
       </div>
+
+      <div class="absolute lg:flex bg-[#FFF] w-3/4 rounded-xl justify-center mr-36 ml-36 -mt-16 hidden lg:visible md:visible">
+        <img src="./images/fruit1.png" alt="">
+        <img src="./images/fruit2.png" alt="">
+        <img src="./images/fruit3.png" alt="">
+        <img src="./images/fruit4.png" alt="">
+        <img src="./images/fruit5.png" alt="">
+      </div>
   </header>
 </body>
 </html>
