added the team section

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div class="flex justify-between items-center text-center md:text-start lg:text-start  flex-col md:flex-row lg:flex-row">
         <div class=" w-full md:w-1/2 lg:w-1/2 md:pl-3">
           <h4 class="text-3xl font-bold mb-3">Deal of the day</h4>
-          <p class="text-0">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+          <p class="text-xs">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
         </div>
         <div class="flex items-center justify-between gap-3 mt-8 lg:mt-0">
           <div>
@@ -180,7 +180,7 @@
           </div>
         </div>
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:mt-4 lg:mt-4 gap-5 pl-4 md:pl-0 lg:pl-0">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:mt-4 lg:mt-4 gap-5 pl-4 md:pl-2 md:pr-2 lg:pl-0">
         <div class="card border-2 border-gray-300 rounded-xl">
           <figure class="px-10 pt-10">
             <img src="./images/fruit6.png" alt="" class="rounded-xl" />
@@ -286,9 +286,73 @@
           </div>
         </div>
       </div>
+      <div class="flex justify-center mt-5">
+        <button class="btn btn-error">Shop All</button>
+      </div>
+    </section>
+
+    <section class="team mt-12 pl-4 md:pl-2 md:pr-2 lg:pl-0">
+      <div class="">
+        <div class="hero min-h-screen" style="background-image: url('./images/team.png'); background-repeat: no-repeat;">
+          
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content -mt-96 lg:-mt-0 md:-mt-0 text-center text-neutral-content">
+            <div class="-mt-96 md:-mt-32 lg:-mt-64">
+              <h1 class="mb-5 text-xl lg:text-3xl md:text-xl font-bold">Meet the team section</h1>
+              <p class="text-xs mb-16 md:mb-20 lg:mr-96 lg:ml-96">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            
+          </div>
+          <div class="text-white flex flex-col md:flex-row lg:flex-row justify-center pt-56 md:pt-14 lg:pt-14 gap-2 md:gap-20 lg:gap-32">
+            <div class="text-center">
+              <img class="flex justify-center" src="./images/member1.png" alt="">
+              <h4 class="mt-3">Awlad Hossain</h4>
+              <p class="text-xs">Fruits Expert</p>
+              <div class="flex gap-3 justify-center mt-2">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+            </div>
+            <div class="text-center">
+              <img src="./images/member2.png" alt="">
+              <h4 class="mt-3">Safia Chowdhury</h4>
+              <p class="text-xs">Fruits Expert</p>
+              <div class="flex gap-3 justify-center mt-2">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+            </div>
+            <div class="text-center">
+              <img src="./images/member3.png" alt="">
+              <h4 class="mt-3">Rokib Hossain</h4>
+              <p class="text-xs">Fruits Expert</p>
+              <div class="flex gap-3 justify-center mt-2">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+            </div>
+            <div class="text-center">
+              <img src="./images/member4.png" alt="">
+              <h4 class="mt-3">Chaity</h4>
+              <p class="text-xs">Fruits Expert</p>
+              <div class="flex gap-3 justify-center mt-2">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
+  <footer>
+
+  </footer>
 
   <div class="modal" id="my_modal_8">
     <div class="modal-box text-center">
