--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 </head>
 <body class="font">
   <header  class="container mx-auto">
-    <div class="ml-6 lg:ml-0">
-      <nav class="text-white mb-10 bg-[#F85559] rounded-full">
+    <div class="">
+      <nav class="text-white md:mb-10 lg:mb-10 md:bg-[#F85559] lg:bg-[#F85559] md:rounded-full lg:rounded-full">
         <div class="flex flex-row-reverse lg:flex-row md:flex-row  justify-between p-4">
           <div class="flex-none  visible md:hidden lg:hidden">
-            <button class="btn btn-square btn-ghost">
+            <button class="btn btn-square btn-ghost text-black">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
             </button>
           </div>
@@ -48,8 +48,8 @@
             <span>All fruits</span>
           </div>
           <div class="flex justify-center items-center gap-3">
-            <img class="w-5 lg:w-7" src="./images/logo.png" alt="">
-            <span class="text-xl md:text-2xl lg:text-4xl">Fruit Burst</span>
+            <img class="w-7 lg:w-7" src="./images/logo.png" alt="">
+            <span class="text-xl text-black md:text-white lg:text-white md:text-2xl lg:text-4xl">Fruit Burst</span>
           </div>
           <div class="lg:flex md:flex justify-center items-center hidden lg:visible">
             <input type="search" placeholder="Search" class="relative rounded-full p-1">
@@ -59,7 +59,7 @@
       </nav>
     </div>
 
-      <div class="carousel w-full rounded-xl ml-3 mr-3 lg:ml-0 lg:mr-0">
+      <div class="carousel w-full rounded-xl  lg:ml-0 lg:mr-0">
         <div id="slide1" class="carousel-item relative w-full">
           <div class="hero " style="background-image: url('./images/banner1.png');">
             <div class="hero-overlay bg-opacity-60"></div>
@@ -180,7 +180,7 @@
           </div>
         </div>
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:mt-4 lg:mt-4 gap-5 pl-4 md:pl-2 md:pr-2 lg:pl-0">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 md:mt-4 lg:mt-4 gap-5 pl-2 pr-2 md:pl-2 md:pr-2 lg:pl-0">
         <div class="card border-2 border-gray-300 rounded-xl">
           <figure class="px-10 pt-10">
             <img src="./images/fruit6.png" alt="" class="rounded-xl" />
@@ -291,14 +291,14 @@
       </div>
     </section>
 
-    <section class="team mt-12 pl-4 md:pl-2 md:pr-2 lg:pl-0">
+    <section class="team mt-12 pl-2 pr-2 md:pl-2 md:pr-2 lg:pl-0">
       <div class="">
-        <div class="hero min-h-screen" style="background-image: url('./images/team.png'); background-repeat: no-repeat;">
+        <div class="hero min-h-screen rounded-xl" style="background-image: url('./images/team.png'); background-repeat: no-repeat;">
           
-          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-overlay rounded-xl bg-opacity-60"></div>
           <div class="hero-content -mt-96 lg:-mt-0 md:-mt-0 text-center text-neutral-content">
-            <div class="-mt-96 md:-mt-32 lg:-mt-64">
-              <h1 class="mb-5 text-xl lg:text-3xl md:text-xl font-bold">Meet the team section</h1>
+            <div class="-mt-96 md:-mt-32 lg:-mt-44">
+              <h1 class="text-xl lg:text-xl md:text-xl font-bold">Meet the team section</h1>
               <p class="text-xs mb-16 md:mb-20 lg:mr-96 lg:ml-96">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
             
@@ -350,8 +350,29 @@
     </section>
   </main>
 
-  <footer>
-
+  <footer class="footer footer-center mr-0 p-10  bg-[#121212] text-base-content rounded mt-11 ">
+    <div class="pt-5 flex justify-center items-center">
+      <img class="w-5 lg:w-7" src="./images/logo.png" alt="">
+      <span class="font-bold text-white text-xl">Fruits Burst</span>
+    </div>
+    <div class="grid  grid-cols-3 lg:grid-cols-6 gap-6 text-white">
+      <a class="link link-hover">Home</a> 
+      <a class="link link-hover">About Us</a> 
+      <a class="link link-hover">Shop</a> 
+      <a class="link link-hover">All Fruits</a>
+      <a class="link link-hover">Support</a>
+      <a class="link link-hover">My Account</a>
+    </div> 
+    <div class="text-2xl text-white ">
+      <div class="grid grid-flow-col gap-6">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-apple"></i>
+      </div>
+    </div> 
   </footer>
 
   <div class="modal" id="my_modal_8">
