added the change

--- a/index.html
+++ b/index.html
@@ -348,6 +348,33 @@
         </div>
       </div>
     </section>
+
+    <section class="choose">
+      <div class="mt-20">
+        <div class="text-center">
+          <h2 class="font-extrabold text-3xl mb-5">Why Choose Us</h2>
+          <p class="text-xs">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+        <div class="grid grid-flow-col">
+          <div class="">
+            <div class="flex justify-start items-center gap-2">
+              <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-people-group"></i></span>
+            <div>
+              <h2 class="font-extrabold text-2xl">Dedicated Team</h2>
+              <hr>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            </div>
+
+          </div>
+          <img src="./images/whychoose1.png" alt="">
+          <div>
+
+          </div>
+      </div>
+      </div>
+    </section>
+
   </main>
 
   <footer class="footer footer-center mr-0 p-10  bg-[#121212] text-base-content rounded mt-11 ">
