--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
           <h2 class="font-extrabold text-3xl mb-5">Why Choose Us</h2>
           <p class="text-xs">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
         </div>
-        <div class="grid grid-flow-col">
-          <div class="">
-            <div class="flex justify-start items-center gap-2">
+        <div class="flex flex-col  lg:flex-row gap-5 mt-10">
+          <div class="space-y-14 text-center">
+            <div class="flex justify-center items-center lg:justify-start lg:items-center gap-2">
               <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-people-group"></i></span>
             <div>
               <h2 class="font-extrabold text-2xl">Dedicated Team</h2>
@@ -365,11 +365,49 @@
               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
             </div>
-
+            <div class="flex justify-start items-center gap-2">
+              <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-heart-circle-plus"></i></i></span>
+            <div>
+              <h2 class="font-extrabold text-2xl">Fresh is Best</h2>
+              <hr>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            </div>
+            <div class="flex justify-start items-center gap-2">
+              <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-gift"></i></span>
+            <div>
+              <h2 class="font-extrabold text-2xl">Gift Certificates</h2>
+              <hr>
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            </div>
           </div>
-          <img src="./images/whychoose1.png" alt="">
-          <div>
-
+          <img class="order-first lg:order-none md:order-none" src="./images/whychoose1.png" alt="">
+          <div class="flex flex-col text-center lg:text-right space-y-14">
+            <div class="flex items-center gap-2">
+              <div>
+                <h2 class="font-extrabold text-2xl">Integrated Supplier</h2>
+                <hr>
+                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+              <span class="bg-slate-300 rounded-full p-2 "><i class="fa-solid fa-leaf"></i></span>
+            </div>
+            <div class="flex justify-start items-center gap-2">
+              <div>
+                <h2 class="font-extrabold text-2xl">Sustainable Practice</h2>
+                <hr>
+                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+              <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-ice-cream"></i></span>
+            </div>
+            <div class="flex justify-end items-center gap-2">
+              <div>
+                <h2 class="font-extrabold text-2xl">The Benefits Only</h2>
+                <hr>
+                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+              <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-thumbs-up"></i></span>
+            </div>
           </div>
       </div>
       </div>
