--- a/index.html
+++ b/index.html
@@ -349,15 +349,15 @@
       </div>
     </section>
 
-    <section class="choose">
+    <section class="choose m-2 lg:m-0">
       <div class="mt-20">
         <div class="text-center">
           <h2 class="font-extrabold text-3xl mb-5">Why Choose Us</h2>
           <p class="text-xs">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
         </div>
         <div class="flex flex-col  lg:flex-row gap-5 mt-10">
-          <div class="space-y-14 text-center">
-            <div class="flex justify-center items-center lg:justify-start lg:items-center gap-2">
+          <div class="space-y-14 text-center lg:text-start">
+            <div class="flex justify-center lg:flex-row flex-col lg:justify-start items-center gap-2">
               <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-people-group"></i></span>
             <div>
               <h2 class="font-extrabold text-2xl">Dedicated Team</h2>
@@ -365,7 +365,7 @@
               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
             </div>
-            <div class="flex justify-start items-center gap-2">
+            <div class="flex lg:justify-start items-center lg:flex-row flex-col  gap-2">
               <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-heart-circle-plus"></i></i></span>
             <div>
               <h2 class="font-extrabold text-2xl">Fresh is Best</h2>
@@ -373,7 +373,7 @@
               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
             </div>
             </div>
-            <div class="flex justify-start items-center gap-2">
+            <div class="flex lg:justify-start flex-col lg:flex-row items-center gap-2">
               <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-gift"></i></span>
             <div>
               <h2 class="font-extrabold text-2xl">Gift Certificates</h2>
@@ -382,31 +382,31 @@
             </div>
             </div>
           </div>
-          <img class="order-first lg:order-none md:order-none" src="./images/whychoose1.png" alt="">
+          <img class="order-first lg:order-none md:order-none m-2 lg:m-0" src="./images/whychoose1.png" alt="">
           <div class="flex flex-col text-center lg:text-right space-y-14">
-            <div class="flex items-center gap-2">
+            <div class="flex items-center lg:flex-row flex-col gap-2">
               <div>
                 <h2 class="font-extrabold text-2xl">Integrated Supplier</h2>
                 <hr>
                 <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
-              <span class="bg-slate-300 rounded-full p-2 "><i class="fa-solid fa-leaf"></i></span>
+              <span class="bg-slate-300 rounded-full p-2 order-first lg:order-last"><i class="fa-solid fa-leaf"></i></span>
             </div>
-            <div class="flex justify-start items-center gap-2">
+            <div class="flex justify-start items-center lg:flex-row flex-col gap-2">
               <div>
                 <h2 class="font-extrabold text-2xl">Sustainable Practice</h2>
                 <hr>
                 <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
-              <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-ice-cream"></i></span>
+              <span class=" bg-slate-300 rounded-full p-2 order-first lg:order-last"><i class="fa-solid fa-ice-cream"></i></span>
             </div>
-            <div class="flex justify-end items-center gap-2">
+            <div class="flex justify-end items-center lg:flex-row flex-col gap-2">
               <div>
                 <h2 class="font-extrabold text-2xl">The Benefits Only</h2>
                 <hr>
                 <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
-              <span class=" bg-slate-300 rounded-full p-2"><i class="fa-solid fa-thumbs-up"></i></span>
+              <span class=" bg-slate-300 rounded-full p-2 order-first lg:order-last"><i class="fa-solid fa-thumbs-up"></i></span>
             </div>
           </div>
       </div>
